set default label to main branch

--- a/spring-petclinic-config-server/src/main/resources/bootstrap.yml
+++ b/spring-petclinic-config-server/src/main/resources/bootstrap.yml
@@ -5,6 +5,7 @@ spring:
       server:
         git:
           uri: https://github.com/clarusway/petclinic-microservices.git
+          default-label: main
 ---
 spring:
   profiles: local
